--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0",
+  "version": "v0.0.0",
   "name": "@mitz/schems",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -7,14 +7,11 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "mocha",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "check-api": "npm run build && api-extractor run --typescript-compiler-folder ./node_modules/typescript",
-    "refresh-api": "npm run build && api-extractor run --local --verbose --diagnostics --typescript-compiler-folder ./node_modules/typescript"
+    "check-api": "api-extractor run --typescript-compiler-folder ./node_modules/typescript",
+    "refresh-api": "api-extractor run --local --verbose --diagnostics --typescript-compiler-folder ./node_modules/typescript"
   },
   "devDependencies": {
-    "@mitz/eslint-config": "git://github.com/daffacode/mitz-eslint-config.git",
-    "@microsoft/api-extractor": "^7.18.19",
+    "@microsoft/api-extractor": "^7.13.1",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.25",
     "expect": "^26.6.2",
